[tool.poetry]
name = "flask-twilio-video"
version = "0.1.0"
description = ""
authors = ["JosephVC <josephvcardenas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
twilio = "^6.51.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
